Made the github language graph ignore httplib
I didnt make httplib so it just makes sense for it to not be tracked by the language graph

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# Makes the github language graph ignore httplib
+lib/httplib.h linguist-vendored
